WTR first compile: fix compile issues. https://bugs.webkit.org/show_bug.cgi?id=47343

Patch by Jocelyn Turcotte <jocelyn.turcotte@nokia.com> on 2010-10-07
Reviewed by Kenneth Rohde Christiansen.

* WebKitTestRunner/InjectedBundle/Bindings/JSWrappable.h:
* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
* WebKitTestRunner/InjectedBundle/LayoutTestController.h:
* WebKitTestRunner/TestController.cpp:
* WebKitTestRunner/TestInvocation.cpp:

Canonical link: https://commits.webkit.org/59985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69384 268f45cc-cd09-0410-ab3c-d52691b4dbfc